--- a/ebook-landing/backend/pyproject.toml
+++ b/ebook-landing/backend/pyproject.toml
@@ -10,13 +10,14 @@ python = "^3.11"
 fastapi = {extras = ["standard"], version = "^0.115.4"}
 stripe = "^11.2.0"
 pydantic-settings = "^2.6.1"
+sendgrid = "^6.11.0"
+httpx = "^0.27.2"
 
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.3"
 ruff = "^0.7.2"
 taskipy = "^1.14.0"
-httpx = "^0.27.2"
 
 [build-system]
 requires = ["poetry-core"]
