--- a/book-nest/package.json
+++ b/book-nest/package.json
@@ -23,5 +23,9 @@
 		"svelte-check": "^4.0.0",
 		"typescript": "^5.0.0",
 		"vite": "^6.0.0"
+	},
+	"dependencies": {
+		"@supabase/ssr": "^0.5.2",
+		"@supabase/supabase-js": "^2.49.1"
 	}
 }
