feat: upload book cover

--- a/book-nest/package.json
+++ b/book-nest/package.json
@@ -28,6 +28,7 @@
 	},
 	"dependencies": {
 		"@supabase/ssr": "^0.5.2",
-		"@supabase/supabase-js": "^2.49.1"
+		"@supabase/supabase-js": "^2.49.1",
+		"svelte-file-dropzone": "^2.0.9"
 	}
 }
